# app/Http/Requests/UserRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class PeriodoRequest extends FormRequest
+class UserRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,8 +24,10 @@ class PeriodoRequest extends FormRequest
     public function rules()
     {
         return [
-            'tipo'=> ['required', 'max:15'],
-            'periodo'=> ['required', 'max:15']
+            'name'=> ['required', 'max:100'],
+            'email'=> ['required','email', 'max:100'],
+            'username'=> ['required', 'max:15'],
+            'password'=> ['required', 'min:3']
         ];
     }
 }
