# routes/api.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\Api\TurmaController;
 use App\Http\Controllers\Api\MateriaController;
 use App\Http\Controllers\Api\PeriodoController;
 use App\Http\Controllers\Api\NotaController;
+use App\Http\Controllers\Api\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -65,3 +66,10 @@ Route::get('nota/{id}', [NotaController::class, 'show']);
 Route::post('nota', [NotaController::class, 'store']);
 Route::put('nota/{id}', [NotaController::class, 'update']);
 Route::delete('nota/{id}', [NotaController::class, 'destroy']);
+
+//Rotas API Usuário
+Route::get('users', [UserController::class, 'index']);
+Route::get('user/{id}', [UserController::class, 'show']);
+Route::post('user', [UserController::class, 'store']);
+Route::put('user/{id}', [UserController::class, 'update']);
+Route::delete('user/{id}', [UserController::class, 'destroy']);
